feat: Support for Managed SQL